tests/e2e/semantics/ops_add_int_regex.error
Error: syntax error in story at line 1, column 5

1|    a = 1 + /foo/
          ^^^^^^^^^

E0103: `+` between `int` and `regexp` is not supported.
